New Crowdin updates (#897)

--- a/public/_locales/bg/messages.json
+++ b/public/_locales/bg/messages.json
@@ -1,6 +1,6 @@
 {
     "fullName": {
-        "message": "SponsorBlock за YouTube - пропускай спонсорства",
+        "message": "SponsorBlock за YouTube - пропускайте спонсорства",
         "description": "Name of the extension."
     },
     "Description": {
@@ -8,16 +8,16 @@
         "description": "Description of the extension."
     },
     "400": {
-        "message": "Сървърът каза, че тази заявка е невалидна"
+        "message": "Сървърът съобщава, че тази заявка е невалидна"
     },
     "429": {
         "message": "Подали сте прекалено много спонсорства за едно видео, сигурни ли сте, че има толкова много?"
     },
     "409": {
-        "message": "Това спонсорство вече е подадено"
+        "message": "Това спонсорство е вече изпратено"
     },
     "channelWhitelisted": {
-        "message": "Каналът е добавен към Whitelist!"
+        "message": "Каналът е добавен към белия списък!"
     },
     "Segment": {
         "message": "сегмент"
@@ -29,28 +29,28 @@
         "message": "Одобряване на това предложение"
     },
     "reportButtonTitle": {
-        "message": "Докладвай"
+        "message": "Докладване"
     },
     "reportButtonInfo": {
         "message": "Подайте сигнал за неправилно предложение."
     },
     "Dismiss": {
-        "message": "Отхвърли"
+        "message": "Отхвърляне"
     },
     "Loading": {
         "message": "Зареждане..."
     },
     "Hide": {
-        "message": "Никога не показвай"
+        "message": "Никога да не се показва"
     },
     "hitGoBack": {
-        "message": "Натиснете \"върни\" за да се върнете където бяхте."
+        "message": "Натиснете „връщане“, за да се върнете там, където бяхте."
     },
     "unskip": {
-        "message": "Върни"
+        "message": "Връщане"
     },
     "reskip": {
-        "message": "Пропусни отново"
+        "message": "Пропускане отново"
     },
     "paused": {
         "message": "На пауза"
@@ -59,13 +59,13 @@
         "message": "Таймерът е спрян"
     },
     "confirmMSG": {
-        "message": "За да редактирате или изтриете някои стойности, натиснете на \"инфо\" бутона или отворете изкачащият прозорец на добавката чрез кликване на иконата на добавката в горният ляв ъгъл."
+        "message": "За да редактирате или изтриете отделни стойности, щракнете върху бутона за информация или отворете изскачащия прозорец на разширението, като щракнете върху иконата на разширението в горния десен ъгъл."
     },
     "clearThis": {
-        "message": "Сигурни ли сте, че искате да изчистите това?\n\n"
+        "message": "Наистина ли искате да изчистите това?\n\n"
     },
     "Unknown": {
-        "message": "Възникна грешка при подаването на Вашите спонсорски времена, моля опитайте отново по-късно."
+        "message": "Възникна грешка при подаването на вашите времена на спонсорства, моля, опитайте отново по-късно."
     },
     "sponsorFound": {
         "message": "Този видеоклип има сегменти в базата данни!"
@@ -74,10 +74,10 @@
         "message": "Не са намерени сегменти"
     },
     "sponsorStart": {
-        "message": "Сегментът Започва Сега"
+        "message": "Сегментът започва сега"
     },
     "sponsorEnd": {
-        "message": "Сегментът Свършва Сега"
+        "message": "Сегментът свършва сега"
     },
     "sponsorCancel": {
         "message": "Отказ от създаването на сегмент"
@@ -92,7 +92,7 @@
         "message": "Успешно!"
     },
     "voted": {
-        "message": "Гласувано!"
+        "message": "Гласувахте!"
     },
     "serverDown": {
         "message": "Изглежда, че сървърът не работи. Свържете се с програмиста незабавно."
@@ -107,7 +107,7 @@
         "message": "Изчистване на сегментите"
     },
     "openPopup": {
-        "message": "Отворете изскачащия прозорец на SponsorBlock"
+        "message": "Отваряне на изскачащия прозорец на SponsorBlock"
     },
     "closePopup": {
         "message": "Затваряне на прозореца"
@@ -116,7 +116,7 @@
         "message": "Изпращане на сегментите"
     },
     "submitCheck": {
-        "message": "Сигурни ли сте, че искате да подадете това?"
+        "message": "Наистина ли искате да изпратите това?"
     },
     "whitelistChannel": {
         "message": "Добавяне на канала към белия списък"
@@ -162,19 +162,19 @@
         "message": "Задайте потребителско име"
     },
     "discordAdvert": {
-        "message": "Елате в официалния Discord сървър за да давате предложения!"
+        "message": "Елате в официалния Discord сървър, за да давате предложения!"
     },
     "hideThis": {
-        "message": "Скрий това"
+        "message": "Скриване на това"
     },
     "Options": {
-        "message": "Настройки"
+        "message": "Опции"
     },
     "showButtons": {
-        "message": "Показване на бутоните в YouTube Player-а"
+        "message": "Показване на бутоните в плейъра на YouTube"
     },
     "hideButtons": {
-        "message": "Скриване на бутоните в YouTube Player-а"
+        "message": "Скриване на бутоните в плейъра на YouTube"
     },
     "hideButtonsDescription": {
         "message": "Това скрива бутоните, които се показват в плейъра на YouTube за изпращане на сегменти за пропускане."
@@ -445,7 +445,7 @@
         "message": "Начално състояние"
     },
     "customAddressError": {
-        "message": "Този адрес не е в правилната форма. Уверете се, че имате http:// или https:// в началото и няма последващи наклонени черти."
+        "message": "Този адрес не е в правилния формат. Уверете се, че имате http:// или https:// в началото и няма последващи наклонени черти."
     },
     "areYouSureReset": {
         "message": "Наистина ли искате да върнете началното състояние?"
@@ -521,22 +521,22 @@
         "message": "Платена промоция, платени препоръки и директни реклами. Не за самореклама или безплатни препоръки за каузи/създатели/уебсайтове/продукти, които се харесват на автора."
     },
     "category_selfpromo": {
-        "message": "Неплатена/Само-реклама"
+        "message": "Неплатени/Самореклама"
     },
     "category_selfpromo_description": {
-        "message": "Подобно на \"спонсорство\", но е неплатено. Това включва merchandise, дарения или информация с кого каналът има сътрудничество."
+        "message": "Подобно на „спонсорство“, но за безплатна реклама или самореклама. Това включва търговия със стоки, дарения или информация с кого каналът има сътрудничество."
     },
     "category_interaction": {
-        "message": "Напомняне за действие (Абониране)"
+        "message": "Напомняне за действие (абониране)"
     },
     "category_interaction_description": {
-        "message": "Когато има кратко напомняне да харесате, да се абонирате или да последвате канала по средата на съдържанието. Ако е дълго или заради нещо специфично, трябва да е под \"само-реклама\"."
+        "message": "Когато има кратко напомняне да харесате, да се абонирате или да последвате канала по средата на съдържанието. Ако е дълго или за нещо специфично, трябва да е под „самореклама“."
     },
     "category_interaction_short": {
         "message": "Напомняне за взаимодействие"
     },
     "category_intro": {
-        "message": "Пауза/Начална анимация"
+        "message": "Антракт/Начална анимация"
     },
     "category_intro_description": {
         "message": "Интервал без реално съдържание. Може да бъде пауза, статичен кадър, повтаряща се анимация. Това не трябва да се използва за преходи, съдържащи информация."
@@ -551,7 +551,7 @@
         "message": "Заслуги или когато се показват крайните карти на YouTube. Не за заключения с информация."
     },
     "category_preview": {
-        "message": "Предварително изявление/Обобщение"
+        "message": "Кратко резюме/Обобщение"
     },
     "category_preview_description": {
         "message": "Бързо обобщение на предишни епизоди или преглед на това, което предстои по-късно в текущия видеоклип. Предназначен за монтирани заедно клипове, а не за речеви обобщения."
@@ -560,7 +560,7 @@
         "message": "Музика: Част без музика"
     },
     "category_music_offtopic_description": {
-        "message": "Само за използване в музикални видеоклипове. Това трябва да се използва само за части от музикални видеоклипове, които вече не са обхванати от друга категория."
+        "message": "За използване само в музикални видеоклипове. Това трябва да се използва само за части от музикални видеоклипове, които вече не са обхванати от друга категория."
     },
     "category_music_offtopic_short": {
         "message": "Без музика"
@@ -581,13 +581,13 @@
         "message": "Автоматично пропускане"
     },
     "manualSkip": {
-        "message": "Ръчно Прескачане"
+        "message": "Ръчно пропускане"
     },
     "showOverlay": {
-        "message": "Показване в seek лентата"
+        "message": "Показване в лентата на прогреса"
     },
     "disable": {
-        "message": "Забрани"
+        "message": "Деактивиране"
     },
     "autoSkip_POI": {
         "message": "Автоматично прескачане до началото"
@@ -596,20 +596,20 @@
         "message": "Питане, когато видеото се зарежда"
     },
     "showOverlay_POI": {
-        "message": "Показване в лентата за превъртане"
+        "message": "Показване в лентата на прогреса"
     },
     "autoSkipOnMusicVideos": {
         "message": "Автоматично пропускане на всички сегменти, когато има сегмент без музика"
     },
     "colorFormatIncorrect": {
-        "message": "Вашият цвят не е форматиран правилно. Трябва да бъде 3- или 6-цифрен hex код с \"#\" в началото."
+        "message": "Вашият цвят не е форматиран правилно. Трябва да бъде 3- или 6-цифрен шестнадесетичен код с „#“ в началото."
     },
     "previewColor": {
         "message": "Цвят на неизпратен сегмент",
         "description": "Referring to submissions that have not been sent to the server yet."
     },
     "seekBarColor": {
-        "message": "Цвят на лентата за превъртане"
+        "message": "Цвят на лентата на прогреса"
     },
     "category": {
         "message": "Категория"
@@ -684,32 +684,36 @@
         "message": "Помислете за активиране на „Принудителна проверка на канала преди пропускане“"
     },
     "downvoteDescription": {
-        "message": "Грешно/Неправилно Време"
+        "message": "Грешно/Неправилно време"
     },
     "incorrectCategory": {
-        "message": "Грешна Категория"
+        "message": "Грешна категория"
     },
     "nonMusicCategoryOnMusic": {
         "message": "Това видео е категоризирано като музика. Сигурни ли сте, че това има спонсор? Ако това всъщност е „Немузикален сегмент“, отворете опциите на разширението и активирайте тази категория. След това можете да изпратите този сегмент като „Немузикален“ вместо като спонсор. Моля, прочетете указанията, ако сте объркани."
     },
     "multipleSegments": {
-        "message": "Няколко Сегмента"
+        "message": "Няколко сегмента"
     },
     "guidelines": {
-        "message": "Правила"
+        "message": "Насоки"
     },
     "readTheGuidelines": {
-        "message": "Прочетете указанията!",
+        "message": "Прочетете насоките!!",
         "description": "Show the first time they submit or if they are \"high risk\""
     },
     "categoryUpdate1": {
         "message": "Категориите са тук!"
     },
     "categoryUpdate2": {
-        "message": "Отворете опциите за пропускане на въведения, заключения, продажба на стоки и т.н."
+        "message": "Отворете опциите, за да пропускате въведения, заключения, продажба на стоки и т.н."
     },
     "help": {
         "message": "Помощ"
+    },
+    "GotIt": {
+        "message": "Разбрах",
+        "description": "Used as the button to dismiss a tooltip"
     },
     "experiementOptOut": {
         "message": "Отказ от всички бъдещи експерименти",
@@ -724,5 +728,74 @@
     "voteRejectedWarning": {
         "message": "Гласуването е отхвърлено поради предупреждение. Щракнете, за да отворите чат и да го разрешите, или се върнете по-късно, когато имате време.",
         "description": "This is an integrated chat panel that will appearing allowing them to talk to the Discord/Matrix chat without leaving their browser."
+    },
+    "Donate": {
+        "message": "Дарение"
+    },
+    "hideDonationLink": {
+        "message": "Скриване на връзката за дарение"
+    },
+    "helpPageThanksForInstalling": {
+        "message": "Благодарим ви, че инсталирахте SponsorBlock."
+    },
+    "helpPageReviewOptions": {
+        "message": "Моля, прегледайте опциите по-долу"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Много функции са деактивирани по подразбиране. Ако искате да пропускате въведения, заключения, да използвате Invidious и т.н., активирайте ги по-долу. Можете също да скриете/покажете елементи от потребителския интерфейс."
+    },
+    "helpPageHowSkippingWorks": {
+        "message": "Как работи пропускането"
+    },
+    "helpPageHowSkippingWorks1": {
+        "message": "Видео сегментите автоматично ще бъдат пропуснати, ако бъдат намерени в базата данни. Можете да отворите изскачащия прозорец, като щракнете върху иконата на разширението, за да прегледате какви са сегментите."
+    },
+    "helpPageHowSkippingWorks2": {
+        "message": "Всеки път, когато пропуснете сегмент, ще получите известие. Ако времето изглежда грешно, гласувайте против, като щракнете на палец надолу! Можете също така да гласувате в изскачащия прозорец."
+    },
+    "Submitting": {
+        "message": "Изпращане"
+    },
+    "helpPageSubmitting1": {
+        "message": "Изпращането може да се извърши или в изскачащия прозорец, като натиснете бутона „Сегментът започва сега“, или във видеоплейъра с бутоните на плейъра."
+    },
+    "helpPageSubmitting2": {
+        "message": "Щракването върху бутона за възпроизвеждане показва началото на сегмента, а щракването върху иконата за спиране показва края. Можете да подготвите множество спонсори, преди да натиснете „изпращане“. Щракването върху бутона за качване ще изпрати данните. Щракването върху кошчето за боклук ще ги изтрие."
+    },
+    "Editing": {
+        "message": "Редактиране"
+    },
+    "helpPageEditing1": {
+        "message": "Ако сте объркали, можете да редактирате или изтриете сегментите си, след като щракнете върху бутона със стрелка нагоре."
+    },
+    "helpPageTooSlow": {
+        "message": "Това е твърде бавно"
+    },
+    "helpPageTooSlow1": {
+        "message": "Има клавишни комбинации, ако искате да ги използвате. Натиснете клавиша с точка и запетая, за да посочите началото/края на спонсориран сегмент и щракнете върху апострофа, за да го изпратите. Клавишите могат да бъдат променени в опциите. Ако не използвате подредба QWERTY, вероятно трябва да промените зададените клавиши."
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Мога ли да получа копие от базата данни? Какво ще стане, ако изчезнете?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "Базата данни е публична и достъпна на адрес"
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "Програмният код е достъпен свободно. Така че, дори нещо да ми се случи, вашият принос не се губи."
+    },
+    "helpPageNews": {
+        "message": "Новини и как се прави"
+    },
+    "helpPageSourceCode": {
+        "message": "Къде мога да получа програмния код?"
+    },
+    "Credits": {
+        "message": "Заслуги"
+    },
+    "highlightNewFeature": {
+        "message": "Ново! Отидете до съществената част на видеоклипа с едно щракване с новата категория „Акцент“"
+    },
+    "LearnMore": {
+        "message": "Научете повече"
     }
 }
