--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -227,6 +227,21 @@
     "showSkipNotice": {
         "message": "Показывать уведомление после пропуска сегмента"
     },
+    "noticeVisibilityMode0": {
+        "message": "Полноразмерные уведомления о пропусках"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Уменьшенные уведомления для автоматических пропусков"
+    },
+    "noticeVisibilityMode2": {
+        "message": "Все уведомления уменьшенного размера"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Полупрозрачные уведомления для автоматических пропусков"
+    },
+    "noticeVisibilityMode4": {
+        "message": "Полупрозрачные уведомления для всех пропусков"
+    },
     "longDescription": {
         "message": "SponsorBlock позволяет пропускать спонсорские вставки, начальные и конечные заставки, просьбы подписаться и другое в видео на YouTube. SponsorBlock — коллективное расширение, которое позволяет каждому отправить время начала и конца подобных сегментов в видео. После того, как кто-нибудь отправляет эту информацию, все остальные пользователи расширения будут автоматически пропускать эти сегменты. Так же можно пропускать части клипов без музыки.",
         "description": "Full description of the extension on the store pages."
@@ -696,6 +711,10 @@
     "help": {
         "message": "Помощь"
     },
+    "GotIt": {
+        "message": "Ясно",
+        "description": "Used as the button to dismiss a tooltip"
+    },
     "experiementOptOut": {
         "message": "Отказаться от всех будущих экспериментов",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to back up since all unlisted videos uploaded before 2017 will be set to private."
@@ -709,5 +728,74 @@
     "voteRejectedWarning": {
         "message": "Голосование отклонено из-за предупреждения. Нажмите, чтобы открыть чат, где вы можете решить проблему, или вернитесь, когда у вас будет время.",
         "description": "This is an integrated chat panel that will appearing allowing them to talk to the Discord/Matrix chat without leaving their browser."
+    },
+    "Donate": {
+        "message": "Пожертвовать"
+    },
+    "hideDonationLink": {
+        "message": "Скрыть ссылку на пожертвование"
+    },
+    "helpPageThanksForInstalling": {
+        "message": "Спасибо за установку SponsorBlock."
+    },
+    "helpPageReviewOptions": {
+        "message": "Пожалуйста, ознакомьтесь с настройками ниже"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Многие функции по умолчанию отключены. Если вы хотите пропускать начальные и конечные заставки, использовать Invidious и т.д., включите их ниже. Вы также можете скрыть/показать элементы интерфейса."
+    },
+    "helpPageHowSkippingWorks": {
+        "message": "Как работает пропуск"
+    },
+    "helpPageHowSkippingWorks1": {
+        "message": "Сегменты видео будут автоматически пропущены, если они находятся в базе данных. Вы можете открыть всплывающее окно, нажав на значок расширения, чтобы посмотреть, какие сегменты добавлены."
+    },
+    "helpPageHowSkippingWorks2": {
+        "message": "Когда вы будете пропускать сегмент, вы получите уведомление. Если время покажется вам неправильным, проголосуйте против, нажав на палец вниз! Вы также можете проголосовать во всплывающем окне."
+    },
+    "Submitting": {
+        "message": "Отправка"
+    },
+    "helpPageSubmitting1": {
+        "message": "Отправка может быть выполнена во всплывающем окне нажатием на кнопку \"Сегмент начинается отсюда\" или кнопками в видеоплеере."
+    },
+    "helpPageSubmitting2": {
+        "message": "Нажатие на кнопку воспроизведения означает начало сегмента и нажатие на кнопку стоп обозначает его конец. Вы можете обозначить несколько сегментов перед тем, как нажать на кнопку отправки. Нажатие на корзину удалит всё."
+    },
+    "Editing": {
+        "message": "Редактирование"
+    },
+    "helpPageEditing1": {
+        "message": "Если вы сделали что-то не так, вы можете отредактировать или удалить сегменты, нажав на кнопку со стрелкой вверх."
+    },
+    "helpPageTooSlow": {
+        "message": "Это слишком медленно"
+    },
+    "helpPageTooSlow1": {
+        "message": "Всё это также можно делать при помощи горячих клавиш. Нажмите клавишу \"ж\" для указания начала/конца сегмента, \"э\" для отправки. Клавиши могут быть изменены в настройках. Если вы не используете QWERTY, то стоит сразу поменять горячее клавиши."
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Могу ли я получить копию базы данных? Что если вы пропадёте?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "База данных доступна для всех здесь:"
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "Исходный код в открытом доступе, так что даже если что-то случится со мной, ваш вклад не пропадёт."
+    },
+    "helpPageNews": {
+        "message": "Новости и как это сделано"
+    },
+    "helpPageSourceCode": {
+        "message": "Где можно получить исходный код?"
+    },
+    "Credits": {
+        "message": "Авторы"
+    },
+    "highlightNewFeature": {
+        "message": "Новинка! Переходите сразу к главному моменту видео с помощью новой категории \"Важное\""
+    },
+    "LearnMore": {
+        "message": "Узнать больше"
     }
 }
