--- a/public/_locales/ko/messages.json
+++ b/public/_locales/ko/messages.json
@@ -696,6 +696,10 @@
     "help": {
         "message": "도움"
     },
+    "GotIt": {
+        "message": "확인",
+        "description": "Used as the button to dismiss a tooltip"
+    },
     "experiementOptOut": {
         "message": "향후 모든 실험 기능 비활성화",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to back up since all unlisted videos uploaded before 2017 will be set to private."
@@ -709,5 +713,59 @@
     "voteRejectedWarning": {
         "message": "경고로 인해 투표가 거부되었습니다. 클릭하여 대화로 해결하거나, 나중에 시간이 나면 다시 오세요.",
         "description": "This is an integrated chat panel that will appearing allowing them to talk to the Discord/Matrix chat without leaving their browser."
+    },
+    "Donate": {
+        "message": "후원"
+    },
+    "hideDonationLink": {
+        "message": "후원 링크 숨기기"
+    },
+    "helpPageThanksForInstalling": {
+        "message": "SponsorBlock을 설치해 주셔서 감사드립니다."
+    },
+    "helpPageReviewOptions": {
+        "message": "아래 설정들을 확인해 주세요"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "많은 기능들이 기본적으로 비활성화되어 있습니다. 인트로, 아웃트로나 기타 불필요한 부분을 건너뛰고 싶으시면 아래에서 설정을 켜세요. UI 요소를 볼 것인지 말 것인지도 선택하실 수 있습니다."
+    },
+    "helpPageHowSkippingWorks": {
+        "message": "건너뛰기가 작동하는 방법"
+    },
+    "helpPageHowSkippingWorks1": {
+        "message": "데이터베이스에서 동영상 구간을 찾으면 이를 자동으로 건너뛸 것입니다. 확장 프로그램 아이콘을 눌러 팝업 창을 열면 어떤 것이 무엇인지 미리 확인할 수 있습니다."
+    },
+    "helpPageHowSkippingWorks2": {
+        "message": "구간을 건너뛰면 알림을 받게 됩니다. 알림 팝업에서는 투표도 진행할 수 있습니다. 타이밍이 잘못되었다면 반대 아이콘을 눌러 반대 투표를 보낼 수 있습니다!"
+    },
+    "Submitting": {
+        "message": "제출"
+    },
+    "helpPageSubmitting1": {
+        "message": "\"광고 구간 시작\" 버튼을 누른 다음 팝업에서 제출할 수도 있으며 동영상 플레이어 내 버튼으로 제출할 수도 있습니다."
+    },
+    "Editing": {
+        "message": "수정"
+    },
+    "helpPageEditing1": {
+        "message": "구간을 잘못 설정했다면, 위쪽 화살표 버튼을 누른 다음 구간을 편집하거나 삭제할 수 있습니다."
+    },
+    "helpPageTooSlow": {
+        "message": "너무 느립니다"
+    },
+    "helpPageNews": {
+        "message": "소식 및 제작 방법"
+    },
+    "helpPageSourceCode": {
+        "message": "소스 코드는 어디에서 볼 수 있나요?"
+    },
+    "Credits": {
+        "message": "크레딧"
+    },
+    "highlightNewFeature": {
+        "message": "새 기능! 새로운 하이라이트 카테고리를 통해 동영상의 중요 지점으로 이동하세요"
+    },
+    "LearnMore": {
+        "message": "더보기"
     }
 }
