--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -227,6 +227,21 @@
     "showSkipNotice": {
         "message": "Melding weergeven nadat een segment is overgeslagen"
     },
+    "noticeVisibilityMode0": {
+        "message": "Volledige grootte overslaan-meldingen"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Kleine overslaan-meldingen voor automatisch overslaan"
+    },
+    "noticeVisibilityMode2": {
+        "message": "Allemaal kleine overslaan-meldingen"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Vervaagde overslaan-meldingen"
+    },
+    "noticeVisibilityMode4": {
+        "message": "Allemaal vervaagde overslaan-meldingen"
+    },
     "longDescription": {
         "message": "SponsorBlock laat u sponsoring, intro's, outro's, herinneringen om te abonneren en andere vervelende onderdelen van YouTube-video's overslaan. SponsorBlock is een gecrowdsourcete browser-extensie waarmee iedereen de begin- en eindtijd van gesponsorde segmenten en andere segmenten van YouTube-video's kan indienen. Zodra één persoon deze informatie indient, zal iedereen met deze extensie het gesponsorde segment overslaan. U kunt ook secties zonder muziek in muziekvideo's overslaan.",
         "description": "Full description of the extension on the store pages."
@@ -286,6 +301,18 @@
     },
     "skip_category": {
         "message": "{0} overslaan?"
+    },
+    "skip_to_category": {
+        "message": "Overslaan naar {0}?",
+        "description": "Used for skipping to things (Skip to Highlight)"
+    },
+    "skipped": {
+        "message": "{0} overgeslagen",
+        "description": "Example: Sponsor Skipped"
+    },
+    "skipped_to_category": {
+        "message": "Overgeslagen naar {0}",
+        "description": "Used for skipping to things (Skipped to Highlight)"
     },
     "disableAutoSkip": {
         "message": "Automatisch overslaan uitschakelen"
@@ -391,10 +418,10 @@
         "message": "Segmenten korter dan de ingestelde waarde worden niet overgeslagen of weergegeven in de speler."
     },
     "skipNoticeDuration": {
-        "message": "Duur van melding om over te slaan (seconden):"
+        "message": "Duur van overslaan-melding (seconden):"
     },
     "skipNoticeDurationDescription": {
-        "message": "De melding om over te slaan blijft ten minste zo lang op het scherm staan. Voor handmatig overslaan kan dit misschien zelfs langer zichtbaar zijn."
+        "message": "De overslaan-melding blijft ten minste zo lang op het scherm staan. Voor handmatig overslaan kan dit misschien zelfs langer zichtbaar zijn."
     },
     "shortCheck": {
         "message": "De volgende inzending is korter dan uw \"minimale tijdsduur\"-instelling. Dit kan betekenen dat dit al is ingediend en genegeerd wordt door deze optie. Weet u zeker dat u dit wilt indienen?"
@@ -538,6 +565,12 @@
     "category_music_offtopic_short": {
         "message": "Niet-muziek"
     },
+    "category_poi_highlight": {
+        "message": "Hoogtepunt"
+    },
+    "category_poi_highlight_description": {
+        "message": "Het deel van de video waar de meeste mensen naar op zoek zijn. Gelijkaardig aan \"video begint bij x\"-opmerkingen."
+    },
     "category_livestream_messages": {
         "message": "Livestream: donaties/lezen van berichten"
     },
@@ -555,6 +588,15 @@
     },
     "disable": {
         "message": "Uitschakelen"
+    },
+    "autoSkip_POI": {
+        "message": "Automatisch overslaan naar het begin"
+    },
+    "manualSkip_POI": {
+        "message": "Vragen wanneer de video wordt geladen"
+    },
+    "showOverlay_POI": {
+        "message": "Weergeven in tijdbalk"
     },
     "autoSkipOnMusicVideos": {
         "message": "Automatisch alle segmenten overslaan wanneer er een niet-muziek-segment is"
@@ -669,6 +711,10 @@
     "help": {
         "message": "Help"
     },
+    "GotIt": {
+        "message": "Begrepen",
+        "description": "Used as the button to dismiss a tooltip"
+    },
     "experiementOptOut": {
         "message": "Uitschrijven van alle toekomstige experimenten",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to back up since all unlisted videos uploaded before 2017 will be set to private."
@@ -682,5 +728,74 @@
     "voteRejectedWarning": {
         "message": "Stem geweigerd vanwege een waarschuwing. Klik om een chat te openen om het op te lossen, of kom later terug als u tijd hebt.",
         "description": "This is an integrated chat panel that will appearing allowing them to talk to the Discord/Matrix chat without leaving their browser."
+    },
+    "Donate": {
+        "message": "Doneren"
+    },
+    "hideDonationLink": {
+        "message": "Donatiekoppeling verbergen"
+    },
+    "helpPageThanksForInstalling": {
+        "message": "Bedankt voor het installeren van SponsorBlock."
+    },
+    "helpPageReviewOptions": {
+        "message": "Bekijk de onderstaande opties"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Veel functies zijn standaard uitgeschakeld. Als u intro's of outro's wilt overslaan, Invidious wilt gebruiken, enz., schakelt u ze hieronder in. U kunt ook UI-elementen verbergen/weergeven."
+    },
+    "helpPageHowSkippingWorks": {
+        "message": "Hoe overslaan werkt"
+    },
+    "helpPageHowSkippingWorks1": {
+        "message": "Videosegmenten zullen automatisch worden overgeslagen als ze in de database worden gevonden. U kunt de popup openen door op het pictogram van de extensie te klikken om een voorbeeld te krijgen van wat ze zijn."
+    },
+    "helpPageHowSkippingWorks2": {
+        "message": "Als u een segment overslaat, krijgt u een bericht. Als de timing verkeerd lijkt, stem dan door op downvote te klikken! U kunt ook stemmen in de popup."
+    },
+    "Submitting": {
+        "message": "Indienen"
+    },
+    "helpPageSubmitting1": {
+        "message": "Indienen kan ofwel in de popup door op de knop \"segment begint nu\" te drukken of in de videospeler met de knoppen op de speler."
+    },
+    "helpPageSubmitting2": {
+        "message": "Klikken op de afspelen-knop geeft het begin van een segment aan en klikken op het stop-pictogram geeft het einde aan. U kunt meerdere sponsors voorbereiden voordat u op indienen klikt. Klikken op de uploadknop zal indienen. Klikken op de vuilnisbak zal verwijderen."
+    },
+    "Editing": {
+        "message": "Bewerken"
+    },
+    "helpPageEditing1": {
+        "message": "Als u een fout hebt gemaakt, kunt u uw segmenten bewerken of verwijderen nadat u op de knop met de pijl omhoog hebt geklikt."
+    },
+    "helpPageTooSlow": {
+        "message": "Dit is te traag"
+    },
+    "helpPageTooSlow1": {
+        "message": "Er zijn sneltoetsen als u die wilt gebruiken. Druk op de puntkomma-toets om het begin/einde van een sponsorsegment aan te geven en klik op de apostrof om in te dienen. Deze kunnen worden veranderd in de opties. Als u geen QWERTY gebruikt, moet u waarschijnlijk de toetsencombinatie veranderen."
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Kan ik een kopie van de database krijgen? Wat gebeurt er als u verdwijnt?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "De database is openbaar en beschikbaar op"
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "De broncode is vrij beschikbaar. Dus, zelfs als mij iets overkomt, zijn uw inzendingen niet verloren."
+    },
+    "helpPageNews": {
+        "message": "Nieuws en hoe het gemaakt is"
+    },
+    "helpPageSourceCode": {
+        "message": "Waar kan ik de broncode krijgen?"
+    },
+    "Credits": {
+        "message": "Dank aan"
+    },
+    "highlightNewFeature": {
+        "message": "Nieuw! Ga met één klik naar de kern van de video met de nieuwe hoogtepunt-categorie"
+    },
+    "LearnMore": {
+        "message": "Meer informatie"
     }
 }
